kube/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: story
spec:
  selector: 
    app: story
  type: ClusterIP
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: story-deployment
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: story
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: story
    spec:
      containers:
        - name: story
          image: case0sh/blogis:1.0.47
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          # resources:
          #   requests:
          #     cpu: 1000m
          #     memory: 900Mi
          #   limits:
          #     cpu: 1500m
          #     memory: 950Mi
              
          livenessProbe: 
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            initialDelaySeconds: 5





# n          volumeMounts: 
#             - mountPath: /data/public
#               name: story-vol
#       volumes:
#         - name: story-vol
#           persistentVolumeClaim:
#             claimName: host-pvc
# --- 
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: host-pvc
# spec:
#   volumeName: host-pv
#   accessModes:
#     - ReadWriteOnce
#   storageClassName: standard
#   resources:
#     requests: 
#       storage: 1Gi
# ---
# apiVersion: v1
# kind: PersistentVolume
# metadata:
#   name: host-pv
# spec:
#   capacity: 
#     storage: 1Gi
#   volumeMode: Filesystem
#   storageClassName: standard
#   accessModes:
#     - ReadWriteOnce
#   hostPath:
#     path: /data
#     type: DirectoryOrCreate
